add option menu

--- a/app/src/main/res/menu/list_menu_refresh.xml
+++ b/app/src/main/res/menu/list_menu_refresh.xml
@@ -19,4 +19,9 @@
         android:id="@+id/menu_clear_search"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/mnu_toggle_polling"
+        android:title="@string/start_polling"
+        app:showAsAction="never" />
+
 </menu>
