add manual check

--- a/app/src/main/res/menu/list_menu_refresh.xml
+++ b/app/src/main/res/menu/list_menu_refresh.xml
@@ -24,4 +24,9 @@
         android:title="@string/start_polling"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/mnu_manual_check"
+        android:title="@string/manual_check"
+        app:showAsAction="never" />
+
 </menu>
