modify add api google

--- a/app/src/main/res/menu/list_menu_refresh.xml
+++ b/app/src/main/res/menu/list_menu_refresh.xml
@@ -29,4 +29,9 @@
         android:title="@string/manual_check"
         app:showAsAction="never" />
 
+    <item
+        android:id="@+id/mnu_setting"
+        android:title="@string/photo_setting"
+        app:showAsAction="never" />
+
 </menu>
